working on part three

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
             <h2 class="offerSubheader">ALL CATEGORIES</h2>
             <div class="offerImag"> <img src="../images/New Year Photo.png" alt=""></div>
         </section>
+        <section class="party">
+
+            <div class="paryDetails">
+                <h1 class="partyHeader">Welcome to midnight party</h1>
+                <p class="partyParagraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <h3 class="partySubHeader">Join Now</h3>
+            </div>
+           <div class="partyImg">
+            <img src="images/Group 70.png" alt="" >
+           </div>
+
+        </section>
+        <section class="eventDetails">
+            <h3><span class="detailHeading">Place:</span> New Park Hotel</h3>
+            <h3><span class="detailHeading">Date:</span>31 December Night 2023</h3>
+            <h3><span class="detailHeading">Time:</span>Time: Evening 7.30 pm to 12.30 am</h3>
+            <div class="btnDiv"><button class="btn">JOIN NOW</button></div>
+        </section>
         
     </main>
     
